@@ -1,28 +1,62 @@
-This is Perl module CGI::Header::PSGI.
+NAME
+    CGI::Header::PSGI - Generate PSGI-compatible response header arrayref
 
-INSTALLATION
+SYNOPSIS
+      use CGI::PSGI;
+      use CGI::Header::PSGI;
 
-CGI::Header::PSGI installation is straightforward.
-If your CPAN shell is set up, you should just be able to do
+      my $app = sub {
+          my $env    = shift;
+          my $query  = CGI::PSGI->new( $env );
+          my $header = CGI::Header::PSGI->new( query => $query );
+        
+          my $body = do {
+              # run CGI.pm-based application
+          };
 
-    % cpan CGI::Header::PSGI
+          return [
+              $header->status_code,
+              $header->as_arrayref,
+              [ $body ]
+          ];
+      };
 
-Download it, unpack it, then build it as per the usual:
+VERSION
+    This document refers to CGI::Header::PSGI 0.14.
 
-    % perl Makefile.PL
-    % make && make test
+DESCRIPTION
+    This module can be used to convert CGI.pm-compatible HTTP header
+    properties into PSGI response header array reference.
 
-Then install it:
+    This module requires your query class is orthogonal to a global variable
+    %ENV. For example, CGI::PSGI adds the "env" attribute to CGI.pm, and
+    also overrides some methods which refer to %ENV directly. This module
+    doesn't solve those problems at all.
 
-    % make install
+  METHODS
+    This class inherits all methods from CGI::Header.
 
-DOCUMENTATION
+    Adds the following methods to the superclass:
 
-CGI::Header::PSGI documentation is available as in POD.
-So you can do:
+    $header->status_code
+        Returns HTTP status code.
 
-    % perldoc CGI::Header::PSGI
+    $headers = $header->as_arrayref
+        Returns PSGI response header array reference.
 
-to read the documentation online with your favorite pager.
+    Overrides the following method of the superclass:
 
-Ryo Anazawa
+    ($status_code, $headers) = $header->finalize
+        Return the status code and PSGI header array reference of this
+        response.
+
+SEE ALSO
+    CGI::Emulate::PSGI
+
+AUTHOR
+    Ryo Anazawa (anazawa@cpan.org)
+
+LICENSE
+    This module is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself. See perlartistic.
+
